@@ -8,8 +8,6 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
@@ -28,7 +26,15 @@ public final class CurrentProcessRestartService {
     }
 
     public static void scheduleRestartAfterCurrentProcessExit() throws UniversalConfigException {
-        scheduleRestartAfterCurrentProcessExit(currentWorkingDirectory(), Collections.<String>emptyList());
+        scheduleRestartAfterCurrentProcessExit(currentWorkingDirectory(), currentProcessArguments());
+    }
+
+    public static List<String> currentProcessArguments() {
+        try {
+            return ProcessDiscovery.current().arguments();
+        } catch (RuntimeException ignored) {
+            return List.of();
+        }
     }
 
     /**
@@ -38,26 +44,12 @@ public final class CurrentProcessRestartService {
      */
     public static void scheduleRestartAfterCurrentProcessExit(Path workingDirectory)
             throws UniversalConfigException {
-        scheduleRestartAfterCurrentProcessExit(workingDirectory, Collections.<String>emptyList());
+        scheduleRestartAfterCurrentProcessExit(workingDirectory, currentProcessArguments());
     }
 
     /**
-     * Schedules a restart with a loader-resolved physical Jar or classes directory for the standalone helper.
-     *
-     * <p>Some ModLauncher generations intentionally omit the mod class CodeSource. Loader integrations should use
-     * this overload when they can resolve their own ModFile reliably.</p>
-     */
-    public static void scheduleRestartAfterCurrentProcessExit(
-            Path workingDirectory,
-            Path helperClasspath
-    ) throws UniversalConfigException {
-        scheduleRestartAfterCurrentProcessExit(
-                workingDirectory, Collections.<String>emptyList(), helperClasspath);
-    }
-
-    /**
-     * Schedules the current Minecraft process to be replaced, using loader-provided arguments when the operating
-     * system does not expose the current process arguments through its process metadata API.
+     * Schedules the current Minecraft process to be replaced. Unsupported launchers use the loader-resolved Java
+     * arguments supplied by the loader adapter instead of reconstructing a command line from process metadata.
      */
     public static void scheduleRestartAfterCurrentProcessExit(
             Path workingDirectory,
@@ -66,37 +58,64 @@ public final class CurrentProcessRestartService {
         scheduleRestartAfterCurrentProcessExit(workingDirectory, loaderResolvedArguments, null);
     }
 
-    private static void scheduleRestartAfterCurrentProcessExit(
+    public static void scheduleRestartAfterCurrentProcessExit(
             Path workingDirectory,
             List<String> loaderResolvedArguments,
             Path helperClasspath
     ) throws UniversalConfigException {
-        ProcessDiscovery.Snapshot current = ProcessDiscovery.current();
-        String executable = current.executable();
-        if (executable == null || executable.trim().isEmpty()) {
-            throw new UniversalConfigException("Could not determine the current Java executable.");
-        }
+        ProcessHandle current = ProcessHandle.current();
+        ProcessHandle.Info processInfo = current.info();
+        String executable = processInfo.command()
+                .filter(value -> !value.isBlank())
+                .orElseThrow(() -> new UniversalConfigException("Could not determine the current Java executable."));
         Path normalizedWorkingDirectory = normalizeWorkingDirectory(workingDirectory);
         List<ProcessCommand> ancestors = ancestorCommands(current);
-        Optional<List<String>> currentArguments = currentJavaArguments(current.arguments(), loaderResolvedArguments);
         // Modrinth's documented launch URL requires a database-only internal ID that is not inherited by the game.
         // Guessing it from the folder name could launch the wrong profile, so only self-identifying launchers are used.
-        Optional<LaunchCommand> replacementCandidate = prismFamilyLauncherCommand(
-                System.getenv(), normalizedWorkingDirectory, ancestors);
-        if (!replacementCandidate.isPresent()) {
-            replacementCandidate = atLauncherCommand(normalizedWorkingDirectory, ancestors);
-        }
-        if (!replacementCandidate.isPresent()) {
-            replacementCandidate = gdLauncherCommand(
-                    normalizedWorkingDirectory, ancestors, executable, currentArguments);
-        }
-        LaunchCommand replacement = replacementCandidate.isPresent()
-                ? replacementCandidate.get()
-                : currentArguments.isPresent() ? new LaunchCommand(executable, currentArguments.get()) : null;
+        LaunchCommand replacement = prismFamilyLauncherCommand(System.getenv(), normalizedWorkingDirectory, ancestors)
+                .or(() -> atLauncherCommand(normalizedWorkingDirectory, ancestors))
+                .orElseGet(() -> unsupportedLauncherCommand(executable, loaderResolvedArguments)
+                        .orElse(null));
         if (replacement == null) {
             throw new UniversalConfigException("Could not determine how to restart this launcher instance.");
         }
         scheduleJavaHelper(current.pid(), executable, replacement, normalizedWorkingDirectory, helperClasspath);
+    }
+
+    /**
+     * Builds the default restart command for a launcher without a dedicated integration.
+     *
+     * <p>The launcher is intentionally not inspected here. Every launcher that is not recognized by a dedicated
+     * detector follows this path, including GDLauncher and the official launcher.</p>
+     */
+    static Optional<LaunchCommand> unsupportedLauncherCommand(
+            String currentExecutable,
+            List<String> loaderResolvedArguments
+    ) {
+        if (!isJavaExecutable(currentExecutable)) {
+            return Optional.empty();
+        }
+        return validJavaLaunchArguments(loaderResolvedArguments)
+                .map(arguments -> new LaunchCommand(currentExecutable, arguments));
+    }
+
+    private static Optional<List<String>> validJavaLaunchArguments(List<String> arguments) {
+        if (arguments == null || arguments.isEmpty()) {
+            return Optional.empty();
+        }
+        try {
+            List<String> copied = List.copyOf(arguments);
+            if (copied.stream().anyMatch(value -> value == null || value.isBlank())) return Optional.empty();
+            for (int index = 0; index + 2 < copied.size(); index++) {
+                if (("-cp".equals(copied.get(index)) || "-classpath".equals(copied.get(index)))
+                        && !copied.get(index + 1).isBlank()) {
+                    return hasMainClassAfter(copied, index + 2) ? Optional.of(copied) : Optional.empty();
+                }
+            }
+            return Optional.empty();
+        } catch (RuntimeException ex) {
+            return Optional.empty();
+        }
     }
 
     /**
@@ -109,7 +128,7 @@ public final class CurrentProcessRestartService {
             List<String> applicationArguments
     ) throws UniversalConfigException {
         try {
-            if (classPath == null || classPath.trim().isEmpty() || mainClass == null || mainClass.trim().isEmpty()) {
+            if (classPath == null || classPath.isBlank() || mainClass == null || mainClass.isBlank()) {
                 throw new IllegalArgumentException("Java classpath and main class are required");
             }
             List<String> arguments = new ArrayList<>(
@@ -119,24 +138,7 @@ public final class CurrentProcessRestartService {
             arguments.add(classPath);
             arguments.add(mainClass);
             arguments.addAll(applicationArguments);
-            return immutableCopy(arguments);
-        } catch (RuntimeException ex) {
-            throw new UniversalConfigException("Could not determine the current Java arguments.", ex);
-        }
-    }
-
-    private static Optional<List<String>> currentJavaArguments(
-            List<String> processArguments,
-            List<String> loaderResolvedArguments
-    ) throws UniversalConfigException {
-        try {
-            if (processArguments != null && !processArguments.isEmpty()) {
-                return Optional.of(immutableCopy(processArguments));
-            }
-            if (loaderResolvedArguments == null || loaderResolvedArguments.isEmpty()) {
-                return Optional.empty();
-            }
-            return Optional.of(immutableCopy(loaderResolvedArguments));
+            return List.copyOf(arguments);
         } catch (RuntimeException ex) {
             throw new UniversalConfigException("Could not determine the current Java arguments.", ex);
         }
@@ -168,14 +170,11 @@ public final class CurrentProcessRestartService {
             // A plain Java child keeps argument boundaries intact on every OS. It also avoids generated scripts and
             // Windows administration tools whose delayed-process patterns can trigger security heuristics.
             helper = new ProcessBuilder(buildHelperCommand(
-                    helperExecutable(helperJavaExecutable),
-                    helperClasspathEntry(loaderResolvedHelperClasspath)))
+                    helperExecutable(helperJavaExecutable), helperClasspathEntry(loaderResolvedHelperClasspath)))
                     .directory(workingDirectory.toFile())
                     .redirectInput(ProcessBuilder.Redirect.PIPE)
-                    // The helper command carries no account or launch arguments. Preserve its bootstrap diagnostics so
-                    // a missing/invalid packaged classpath is actionable instead of surfacing only as "stopped early".
-                    .redirectOutput(ProcessBuilder.Redirect.appendTo(diagnosticLog.toFile()))
-                    .redirectError(ProcessBuilder.Redirect.appendTo(diagnosticLog.toFile()))
+                    .redirectOutput(ProcessBuilder.Redirect.DISCARD)
+                    .redirectError(ProcessBuilder.Redirect.DISCARD)
                     .start();
             // Loader arguments can contain an access token. Send the launch plan through the helper's private pipe
             // and close it so the helper can validate the complete payload before publishing its ready marker.
@@ -201,14 +200,16 @@ public final class CurrentProcessRestartService {
         deleteQuietly(readyPath);
     }
 
-    private static List<ProcessCommand> ancestorCommands(ProcessDiscovery.Snapshot current) {
-        List<ProcessCommand> commands = new ArrayList<ProcessCommand>();
-        for (ProcessDiscovery.ProcessInfo ancestor : current.ancestors()) {
-            if (ancestor.executable() != null && !ancestor.executable().trim().isEmpty()) {
-                commands.add(new ProcessCommand(ancestor.executable(), ancestor.arguments()));
-            }
+    private static List<ProcessCommand> ancestorCommands(ProcessHandle current) {
+        List<ProcessCommand> commands = new ArrayList<>();
+        ProcessHandle ancestor = current.parent().orElse(null);
+        for (int depth = 0; ancestor != null && depth < 16; depth++) {
+            ProcessHandle.Info info = ancestor.info();
+            info.command().filter(value -> !value.isBlank()).ifPresent(command -> commands.add(
+                    new ProcessCommand(command, info.arguments().map(List::of).orElseGet(List::of))));
+            ancestor = ancestor.parent().orElse(null);
         }
-        return Collections.unmodifiableList(commands);
+        return List.copyOf(commands);
     }
 
     static Optional<LaunchCommand> prismLauncherCommand(
@@ -223,7 +224,7 @@ public final class CurrentProcessRestartService {
         return ancestorCommands.stream()
                 .filter(CurrentProcessRestartService::isPrismLauncherExecutable)
                 .findFirst()
-                .map(command -> new LaunchCommand(command, Arrays.asList("--launch", instanceId)));
+                .map(command -> new LaunchCommand(command, List.of("--launch", instanceId)));
     }
 
     static Optional<LaunchCommand> prismFamilyLauncherCommand(
@@ -239,7 +240,7 @@ public final class CurrentProcessRestartService {
                 .map(ProcessCommand::executable)
                 .filter(CurrentProcessRestartService::isPrismFamilyLauncherExecutable)
                 .findFirst()
-                .map(command -> new LaunchCommand(command, Arrays.asList("--launch", instanceId)));
+                .map(command -> new LaunchCommand(command, List.of("--launch", instanceId)));
     }
 
     private static Optional<String> validatedPrismFamilyInstanceId(
@@ -249,61 +250,24 @@ public final class CurrentProcessRestartService {
         String instanceId = environment.get("INST_ID");
         String instanceDirectoryValue = environment.get("INST_DIR");
         String minecraftDirectoryValue = environment.get("INST_MC_DIR");
+        if (instanceId == null || instanceId.isBlank()
+                || instanceDirectoryValue == null || instanceDirectoryValue.isBlank()
+                || minecraftDirectoryValue == null || minecraftDirectoryValue.isBlank()) {
+            return Optional.empty();
+        }
         try {
-            Path minecraftWorkingDirectory = workingDirectory.toAbsolutePath().normalize();
-            Path instanceDirectory = minecraftWorkingDirectory.getParent();
-            Path minecraftDirectoryName = minecraftWorkingDirectory.getFileName();
-            if (instanceDirectory == null
-                    || minecraftDirectoryName == null
-                    || !minecraftDirectoryName.toString().equalsIgnoreCase("minecraft")) {
-                return Optional.empty();
-            }
+            Path instanceDirectory = Path.of(instanceDirectoryValue).toAbsolutePath().normalize();
+            Path minecraftDirectory = Path.of(minecraftDirectoryValue).toAbsolutePath().normalize();
             Path instanceFolderName = instanceDirectory.getFileName();
-            if (instanceFolderName == null || instanceFolderName.toString().trim().isEmpty()) {
+            if (!minecraftDirectory.equals(workingDirectory.toAbsolutePath().normalize())
+                    || instanceFolderName == null
+                    || !instanceFolderName.toString().equals(instanceId)) {
                 return Optional.empty();
             }
-
-            boolean hasCompleteLauncherEnvironment = !isBlank(instanceId)
-                    && !isBlank(instanceDirectoryValue)
-                    && !isBlank(minecraftDirectoryValue);
-            if (hasCompleteLauncherEnvironment) {
-                Path environmentInstanceDirectory = Paths.get(instanceDirectoryValue).toAbsolutePath().normalize();
-                Path environmentMinecraftDirectory = Paths.get(minecraftDirectoryValue).toAbsolutePath().normalize();
-                if (!samePath(environmentInstanceDirectory, instanceDirectory)
-                        || !samePath(environmentMinecraftDirectory, minecraftWorkingDirectory)
-                        || !instanceFolderName.toString().equals(instanceId)) {
-                    return Optional.empty();
-                }
-            } else if (!Files.isRegularFile(instanceDirectory.resolve("instance.cfg"))) {
-                return Optional.empty();
-            }
-
-            // Prism documents INST_ID for custom commands, but not every launcher/version exports those variables
-            // to the game JVM. The launcher ancestor plus instance.cfg and the conventional minecraft directory
-            // identify the same instance without reusing short-lived account arguments from the Java process.
-            return Optional.of(instanceFolderName.toString());
+            return Optional.of(instanceId);
         } catch (RuntimeException ex) {
             return Optional.empty();
         }
-    }
-
-    private static boolean samePath(Path left, Path right) {
-        try {
-            if (Files.exists(left) && Files.exists(right)) {
-                return Files.isSameFile(left, right);
-            }
-        } catch (IOException | RuntimeException ignored) {
-            // Fall back to normalized text below; the paths were already constrained to the active instance.
-        }
-        String leftValue = left.toAbsolutePath().normalize().toString();
-        String rightValue = right.toAbsolutePath().normalize().toString();
-        return isWindows(System.getProperty("os.name", ""))
-                ? leftValue.equalsIgnoreCase(rightValue)
-                : leftValue.equals(rightValue);
-    }
-
-    private static boolean isBlank(String value) {
-        return value == null || value.trim().isEmpty();
     }
 
     static Optional<LaunchCommand> atLauncherCommand(
@@ -331,7 +295,7 @@ public final class CurrentProcessRestartService {
         if (launcherWorkingDirectory == null) {
             return Optional.empty();
         }
-        List<String> launchArguments = Arrays.asList(
+        List<String> launchArguments = List.of(
                 "--working-dir", launcherWorkingDirectory.toString(),
                 "--launch", instanceName.toString());
         for (ProcessCommand ancestor : ancestorCommands) {
@@ -341,47 +305,11 @@ public final class CurrentProcessRestartService {
             if (isJavaExecutable(ancestor.executable())) {
                 Optional<List<String>> jarArguments = atLauncherJarArguments(ancestor.arguments(), launchArguments);
                 if (jarArguments.isPresent()) {
-                    return Optional.of(new LaunchCommand(ancestor.executable(), jarArguments.get()));
+                    return Optional.of(new LaunchCommand(ancestor.executable(), jarArguments.orElseThrow()));
                 }
             }
         }
         return Optional.empty();
-    }
-
-    static Optional<LaunchCommand> gdLauncherCommand(
-            Path workingDirectory,
-            List<ProcessCommand> ancestorCommands,
-            String currentExecutable,
-            Optional<List<String>> currentArguments
-    ) {
-        if (!isGdLauncherGameDirectory(workingDirectory)
-                || !ancestorCommands.stream().anyMatch(command -> isGdLauncherExecutable(command.executable()))
-                || !ancestorCommands.stream().anyMatch(command -> isGdCoreModuleExecutable(command.executable()))
-                || !isJavaExecutable(currentExecutable)) {
-            return Optional.empty();
-        }
-
-        // Carbon does not provide a stable command-line launch interface for an instance. The core module supervises
-        // the Java child, so reusing the already resolved Java command is the only way to preserve the selected
-        // loader, natives, assets, account, and instance-specific arguments without guessing launcher internals.
-        return currentArguments.map(arguments -> new LaunchCommand(currentExecutable, arguments));
-    }
-
-    private static boolean isGdLauncherGameDirectory(Path workingDirectory) {
-        try {
-            Path gameDirectory = workingDirectory.toAbsolutePath().normalize();
-            Path instanceDirectory = gameDirectory.getParent();
-            Path instancesDirectory = instanceDirectory == null ? null : instanceDirectory.getParent();
-            return gameDirectory.getFileName() != null
-                    && gameDirectory.getFileName().toString().equalsIgnoreCase("instance")
-                    && instanceDirectory != null
-                    && Files.isRegularFile(instanceDirectory.resolve("instance.json"))
-                    && instancesDirectory != null
-                    && instancesDirectory.getFileName() != null
-                    && instancesDirectory.getFileName().toString().equalsIgnoreCase("instances");
-        } catch (RuntimeException ex) {
-            return false;
-        }
     }
 
     private static Optional<List<String>> atLauncherJarArguments(
@@ -399,13 +327,13 @@ public final class CurrentProcessRestartService {
             }
             List<String> arguments = new ArrayList<>(ancestorArguments.subList(0, index + 2));
             arguments.addAll(launchArguments);
-            return Optional.of(immutableCopy(arguments));
+            return Optional.of(List.copyOf(arguments));
         }
         return Optional.empty();
     }
 
     static List<String> buildHelperCommand(String javaExecutable, Path helperClasspath) {
-        return Arrays.asList(
+        return List.of(
                 javaExecutable,
                 "-cp",
                 helperClasspath.toString(),
@@ -431,7 +359,7 @@ public final class CurrentProcessRestartService {
 
     private static Path currentWorkingDirectory() throws UniversalConfigException {
         try {
-            return normalizeWorkingDirectory(Paths.get(System.getProperty("user.dir", ".")));
+            return normalizeWorkingDirectory(Path.of(System.getProperty("user.dir", ".")));
         } catch (UniversalConfigException ex) {
             throw ex;
         } catch (RuntimeException ex) {
@@ -456,11 +384,38 @@ public final class CurrentProcessRestartService {
                     || RestartHelper.class.getProtectionDomain().getCodeSource() == null) {
                 throw new UniversalConfigException("Could not locate the restart helper code.");
             }
-            return helperClasspathEntry(
-                    RestartHelper.class.getProtectionDomain().getCodeSource().getLocation().toURI());
+            return helperClasspathEntry(RestartHelper.class.getProtectionDomain().getCodeSource().getLocation().toURI());
         } catch (URISyntaxException | RuntimeException ex) {
             throw new UniversalConfigException("Could not locate the restart helper code.", ex);
         }
+    }
+
+    private static boolean hasMainClassAfter(List<String> arguments, int startIndex) {
+        int index = startIndex;
+        while (index < arguments.size()) {
+            String value = arguments.get(index);
+            if (!value.startsWith("-")) return true;
+            if (isInlineJvmOption(value)) {
+                index++;
+            } else if (isJvmOptionWithSeparateValue(value) && index + 1 < arguments.size()) {
+                index += 2;
+            } else {
+                return false;
+            }
+        }
+        return false;
+    }
+
+    private static boolean isInlineJvmOption(String value) {
+        return value.startsWith("-D") || value.startsWith("-X")
+                || (value.startsWith("--") && value.indexOf('=') > 2);
+    }
+
+    private static boolean isJvmOptionWithSeparateValue(String value) {
+        return "--add-modules".equals(value) || "--add-exports".equals(value)
+                || "--add-opens".equals(value) || "--add-reads".equals(value)
+                || "--limit-modules".equals(value) || "-p".equals(value) || "--module-path".equals(value)
+                || "--upgrade-module-path".equals(value) || "--patch-module".equals(value);
     }
 
     static Path helperClasspathEntry(Path loaderResolvedPath) throws UniversalConfigException {
@@ -473,47 +428,32 @@ public final class CurrentProcessRestartService {
                 throw new UniversalConfigException("The loader-resolved restart helper code does not exist.");
             }
             return normalized;
+        } catch (UniversalConfigException ex) {
+            throw ex;
         } catch (RuntimeException ex) {
-            throw new UniversalConfigException("Could not locate the loader-resolved restart helper code.", ex);
+            throw new UniversalConfigException("Could not locate the restart helper code.", ex);
         }
     }
 
-    /**
-     * Resolves the physical classpath entry behind a loader URL.
-     *
-     * <p>Forge 1.17+ loads mod classes through SecureJarHandler's {@code union:} filesystem. The
-     * protection-domain location therefore is not directly accepted by {@link Paths#get(URI)}, even though the
-     * standalone restart JVM needs the underlying mod Jar. Keep this conversion in the loader-independent core so
-     * every Forge generation, including launchers that reuse the Java command, starts the same verified helper.</p>
-     */
     static Path helperClasspathEntry(URI location) throws UniversalConfigException {
         if (location == null || location.getScheme() == null) {
             throw new UniversalConfigException("Could not locate the restart helper code.");
         }
         try {
             String scheme = location.getScheme().toLowerCase(Locale.ROOT);
-            if (scheme.equals("file")) {
-                return Paths.get(location).toAbsolutePath().normalize();
-            }
+            if (scheme.equals("file")) return Paths.get(location).toAbsolutePath().normalize();
             if (scheme.equals("jar")) {
-                String nestedLocation = location.getRawSchemeSpecificPart();
-                int entrySeparator = nestedLocation.indexOf("!/");
-                if (entrySeparator >= 0) {
-                    nestedLocation = nestedLocation.substring(0, entrySeparator);
-                }
-                return helperClasspathEntry(URI.create(nestedLocation));
+                String nested = location.getRawSchemeSpecificPart();
+                int separator = nested.indexOf("!/");
+                return helperClasspathEntry(URI.create(separator < 0 ? nested : nested.substring(0, separator)));
             }
             if (scheme.equals("union")) {
                 String physicalPath = location.getPath();
-                int entrySeparator = physicalPath.indexOf("!/");
-                if (entrySeparator >= 0) {
-                    physicalPath = physicalPath.substring(0, entrySeparator);
-                }
-                // SecureJarHandler appends an encoded "#<filesystem id>" after the Jar or classes directory.
-                // It is an internal mount identifier, not part of the physical filename.
-                int mountMarker = physicalPath.lastIndexOf('#');
-                if (mountMarker >= 0 && isDecimal(physicalPath.substring(mountMarker + 1))) {
-                    physicalPath = physicalPath.substring(0, mountMarker);
+                int separator = physicalPath.indexOf("!/");
+                if (separator >= 0) physicalPath = physicalPath.substring(0, separator);
+                int marker = physicalPath.lastIndexOf('#');
+                if (marker >= 0 && physicalPath.substring(marker + 1).chars().allMatch(Character::isDigit)) {
+                    physicalPath = physicalPath.substring(0, marker);
                 }
                 return Paths.get(new URI("file", null, physicalPath, null)).toAbsolutePath().normalize();
             }
@@ -523,24 +463,12 @@ public final class CurrentProcessRestartService {
         }
     }
 
-    private static boolean isDecimal(String value) {
-        if (value.isEmpty()) {
-            return false;
-        }
-        for (int index = 0; index < value.length(); index++) {
-            if (!Character.isDigit(value.charAt(index))) {
-                return false;
-            }
-        }
-        return true;
-    }
-
     private static String helperExecutable(String currentExecutable) {
         if (!isWindows(System.getProperty("os.name", ""))) {
             return currentExecutable;
         }
         try {
-            Path executablePath = Paths.get(currentExecutable).toAbsolutePath().normalize();
+            Path executablePath = Path.of(currentExecutable).toAbsolutePath().normalize();
             Path fileName = executablePath.getFileName();
             if (fileName != null && fileName.toString().equalsIgnoreCase("java.exe")) {
                 Path javaw = executablePath.resolveSibling("javaw.exe");
@@ -575,16 +503,6 @@ public final class CurrentProcessRestartService {
         return fileName.equalsIgnoreCase("atlauncher.exe") || fileName.equalsIgnoreCase("atlauncher");
     }
 
-    private static boolean isGdLauncherExecutable(String command) {
-        String fileName = fileName(command);
-        return fileName.equalsIgnoreCase("gdlauncher.exe") || fileName.equalsIgnoreCase("gdlauncher");
-    }
-
-    private static boolean isGdCoreModuleExecutable(String command) {
-        String fileName = fileName(command);
-        return fileName.equalsIgnoreCase("core_module.exe") || fileName.equalsIgnoreCase("core_module");
-    }
-
     private static boolean isJavaExecutable(String command) {
         String fileName = fileName(command);
         return fileName.equalsIgnoreCase("java.exe")
@@ -593,10 +511,10 @@ public final class CurrentProcessRestartService {
     }
 
     private static String fileName(String command) {
-        if (command == null || command.trim().isEmpty()) {
+        if (command == null || command.isBlank()) {
             return "";
         }
-        // Process metadata can expose a Windows-style path while tests or tooling run on another OS,
+        // ProcessHandle can expose a Windows-style path while tests or tooling run on another OS,
         // so normalize both separator styles before checking launcher executable names.
         String normalized = command.replace('\\', '/');
         int separator = normalized.lastIndexOf('/');
@@ -617,43 +535,15 @@ public final class CurrentProcessRestartService {
         }
     }
 
-    static final class LaunchCommand {
-        private final String executable;
-        private final List<String> arguments;
-
-        LaunchCommand(String executable, List<String> arguments) {
-            this.executable = executable;
-            this.arguments = immutableCopy(arguments);
-        }
-
-        String executable() {
-            return executable;
-        }
-
-        List<String> arguments() {
-            return arguments;
+    record LaunchCommand(String executable, List<String> arguments) {
+        LaunchCommand {
+            arguments = List.copyOf(arguments);
         }
     }
 
-    static final class ProcessCommand {
-        private final String executable;
-        private final List<String> arguments;
-
-        ProcessCommand(String executable, List<String> arguments) {
-            this.executable = executable;
-            this.arguments = immutableCopy(arguments);
+    record ProcessCommand(String executable, List<String> arguments) {
+        ProcessCommand {
+            arguments = List.copyOf(arguments);
         }
-
-        String executable() {
-            return executable;
-        }
-
-        List<String> arguments() {
-            return arguments;
-        }
-    }
-
-    private static List<String> immutableCopy(List<String> values) {
-        return Collections.unmodifiableList(new ArrayList<String>(values));
     }
 }
